--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@remix-run/react": "^1.11.0",
     "@remix-run/vercel": "^1.11.0",
     "@vercel/node": "^2.6.2",
+    "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "latest",
     "remix": "latest",
@@ -29,6 +30,7 @@
     "@remix-run/dev": "^1.11.0",
     "@remix-run/eslint-config": "^1.11.0",
     "@remix-run/serve": "^1.11.0",
+    "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
