--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@remix-run/react": "^1.11.0",
     "@remix-run/vercel": "^1.11.0",
     "@vercel/node": "^2.6.2",
+    "axios": "^1.2.4",
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "latest",
