--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "npx prisma db push && remix build",
     "dev": "remix dev",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@emotion/cache": "^11.10.5",
@@ -28,15 +29,18 @@
     "remix-auth-form": "^1.3.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@remix-run/dev": "^1.11.0",
     "@remix-run/eslint-config": "^1.11.0",
     "@remix-run/serve": "^1.11.0",
+    "@types/node": "^18.11.18",
     "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
     "prisma": "^4.9.0",
-    "typescript": "^4.8.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "engines": {
     "node": ">=14"
