--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "npx prisma db push && remix build",
-    "dev": "remix dev",
+    "build": "run-p build:*",
+    "build:remix": "npx prisma db push && remix build",
+    "build:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --minify --bundle --format=esm --define:process.env.NODE_ENV='\"production\"'",
+    "dev": "run-p dev:*",
+    "dev:remix": "remix dev",
+    "dev:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --bundle --format=esm --define:process.env.NODE_ENV='\"development\"' --watch",
     "typecheck": "tsc",
     "seed": "ts-node prisma/seed.ts"
   },
