--- a/package.json
+++ b/package.json
@@ -2,12 +2,8 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "run-p build:*",
-    "build:remix": "npx prisma db push && remix build",
-    "build:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --minify --bundle --format=esm --define:process.env.NODE_ENV='\"production\"'",
-    "dev": "run-p dev:*",
-    "dev:remix": "remix dev",
-    "dev:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --bundle --format=esm --define:process.env.NODE_ENV='\"development\"' --watch",
+    "build": "npx prisma db push && remix build",
+    "dev": "remix dev",
     "typecheck": "tsc",
     "seed": "ts-node prisma/seed.ts"
   },
