--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.2.4",
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "latest",
     "remix": "latest",
     "remix-auth": "^3.4.0",
