--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "npx prisma db push && remix build",
-    "dev": "remix dev",
+    "dev": "npx prisma db push && remix dev",
     "typecheck": "tsc",
     "seed": "ts-node prisma/seed.ts"
   },
