--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "latest",
     "remix": "latest",
     "remix-auth": "^3.4.0",
-    "remix-auth-form": "^1.3.0"
+    "remix-auth-form": "^1.3.0",
+    "ts-invariant": "^0.10.3"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -41,7 +42,8 @@
     "eslint": "^8.27.0",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vitest": "^0.29.8"
   },
   "engines": {
     "node": ">=14"
