--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "build": "npx prisma db push && remix build",
     "dev": "npx prisma db push && remix dev",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "typecheck": "tsc",
     "seed": "ts-node prisma/seed.ts"
   },
@@ -39,6 +41,7 @@
     "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@vitest/coverage-c8": "^0.29.8",
     "eslint": "^8.27.0",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
