--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "build": "npx prisma db push && remix build",
     "dev": "npx prisma db push && remix dev",
-    "test": "vitest",
-    "coverage": "vitest run --coverage",
+    "test": "vitest --coverage",
+    "test:ui": "vitest --coverage --ui",
     "typecheck": "tsc",
     "seed": "ts-node prisma/seed.ts"
   },
@@ -42,11 +42,15 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@vitest/coverage-c8": "^0.29.8",
+    "@vitest/coverage-istanbul": "^0.29.8",
+    "@vitest/ui": "^0.29.8",
     "eslint": "^8.27.0",
+    "faker": "^6.6.6",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
-    "vitest": "^0.29.8"
+    "vitest": "^0.29.8",
+    "vitest-mock-extended": "^1.1.3"
   },
   "engines": {
     "node": ">=14"
