--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "latest",
-    "remix": "latest",
+    "react-dom": "^18.2.0",
+    "remix": "^1.15.0",
     "remix-auth": "^3.4.0",
     "remix-auth-form": "^1.3.0",
     "ts-invariant": "^0.10.3"
