--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,7 +17,7 @@ jobs:
       run: npm install
       
     - name: TypeScript Check
-      run: npm run tsc -- --noEmit
+      run: npm run typecheck -- --noEmit
       
     - name: Test
       run: npm test
