--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "scripts": {
     "build": "npx prisma db push && remix build",
     "dev": "npx prisma db push && remix dev",
+    "storybook": "storybook dev -p 6006",
     "test": "vitest --coverage",
     "test:ui": "vitest --coverage --ui",
     "typecheck": "tsc",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/cache": "^11.10.5",
@@ -33,22 +35,38 @@
     "ts-invariant": "^0.10.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
     "@faker-js/faker": "^7.6.0",
     "@remix-run/dev": "^1.11.0",
     "@remix-run/eslint-config": "^1.11.0",
     "@remix-run/serve": "^1.11.0",
+    "@storybook/addon-essentials": "^7.0.5",
+    "@storybook/addon-interactions": "^7.0.5",
+    "@storybook/addon-links": "^7.0.5",
+    "@storybook/blocks": "^7.0.5",
+    "@storybook/react": "^7.0.5",
+    "@storybook/react-webpack5": "^7.0.5",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/node": "^18.11.18",
     "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/uuid": "^9.0.1",
     "@vitest/coverage-c8": "^0.29.8",
     "@vitest/coverage-istanbul": "^0.29.8",
     "@vitest/ui": "^0.29.8",
     "eslint": "^8.27.0",
+    "eslint-plugin-storybook": "^0.6.11",
     "faker": "^6.6.6",
     "prisma": "^4.9.0",
+    "prop-types": "^15.8.1",
+    "react-router-dom": "^6.10.0",
+    "storybook": "^7.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
+    "uuid": "^9.0.0",
     "vitest": "^0.29.8",
     "vitest-mock-extended": "^1.1.3"
   },
