--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@remix-run/node": "^1.11.0",
     "@remix-run/react": "^1.11.0",
     "@remix-run/vercel": "^1.11.0",
+    "@sentry/remix": "^7.51.0",
     "@vercel/node": "^2.6.2",
     "axios": "^1.2.4",
     "papaparse": "^5.3.2",
