--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@sentry/remix": "^7.51.0",
     "@vercel/node": "^2.6.2",
     "axios": "^1.2.4",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.3",
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
