--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@remix-run/vercel": "^1.11.0",
     "@sentry/remix": "^7.58.0",
     "@vercel/node": "^2.6.2",
+    "@vitest/coverage-v8": "^0.33.0",
     "axios": "^1.2.4",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
